--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 uvicorn==0.23.1
 fastapi==0.103.1
-selenium 
-Pillow 
-langchain
-torch 
-transformers
+selenium==4.20.0 
+Pillow==9.5.0 
+langchain==0.0.194
+torch==2.1.0 
+transformers==4.31.0
 chromedriver-py==129.0.6668.70
-openai
+openai==0.27.0
+google-generativeai     
